# Good-Bots

./: .flake8  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: tests.yml
good_bots/: __init__.py  __main__.py  additional_bots.json  cli.py  core.py
tests/: conftest.py
tests/unit/: test_cli.py  test_core.py
